# capstone-data-tool

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.ci/: .user.yml  profiles.yml
.github/workflows/: ci.yml  jira-agent.yml
app/: dashboard.py
capstone_data_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
cli/: llm.py  main.py
dbt_project/: dbt_project.yml
dbt_project/models/marts/: mart_payment_mix.sql  mart_trip_summary.sql  schema.yml
dbt_project/models/staging/: schema.yml  sources.yml  stg_taxi_zones.sql  stg_yellow_trips.sql
dbt_project/tests/: assert_int_trips_enriched_pickup_hour_bounds.sql  assert_int_trips_enriched_zero_duration_yields_null_speed.sql  assert_mart_payment_mix_share_sums_to_one.sql  assert_mart_payment_mix_unique_grain.sql
reporting/: deck_builder.py  figures.py
scripts/: load_raw.py
tests/: test_cli.py  test_deck_builder.py  test_llm.py
tests/fixtures/: sample_trips.parquet
