[project]
name = "capstone-data-tool"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.11",
    "dbt-duckdb>=1.10",
    "click>=8.0",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
datatool = "cli.main:cli"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.4",
]
